crates/viewer/re_dataframe_ui/tests/snapshots/filter_tests__string_contains@nullable_A.snap
---
source: crates/viewer/re_dataframe_ui/tests/filter_tests.rs
expression: "(filter, result)"
---
(
    Filter {
        column_name: "string",
        operation: StringContains(
            "A",
        ),
    },
    RecordBatch {
        schema: Schema {
            fields: [
                Field {
                    name: "string",
                    data_type: Utf8,
                    nullable: true,
                    dict_id: 0,
                    dict_is_ordered: false,
                    metadata: {},
                },
            ],
            metadata: {},
        },
        columns: [
            StringArray
            [
              "a",
              "ab",
              "A B",
              "aBc",
            ],
        ],
        row_count: 4,
    },
)
